<resources>
    <string name="app_name">BooksApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_app">Book App</string>
    <string name="library">Library</string>
    <string name="welcome_to_book_app">Welcome to Book App</string>
    <string name="readers">Readers</string>
    <string name="likes">Likes</string>
    <string name="quotes">Quotes</string>
    <string name="summary">Summary</string>
    <string name="you_will_also_like">You will also like</string>
    <string name="read_now">Read Now</string>
    <string name="something_goes_wrong">Something goes wrong(</string>
    <string name="genre">Genre</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>